# engix_robot

./: README.md
engix_control/: README.md  package.xml
engix_control/config/: control.yaml  controller.yaml  engix.lua  odrive.yaml  teleop_logitech.yaml  twist_mux.yaml
engix_control/config/old/: control.yaml  controller (копия).yaml
engix_control/launch/: control.launch  diagnostic.launch  move_base.launch  teleop.launch
engix_description/: README.md  package.xml
engix_description/launch/: description.launch
engix_description/urdf/: .engix.urdf.swp  engix.gazebo  engix.gv  engix.trans  engix.urdf  engix.xacro
engix_gazebo/: README.md  package.xml
engix_gazebo/launch/: base.launch  baylands.launch  engix_baylands.launch  engix_baylands_world.launch  engix_empty_world.launch  engix_playpen.launch  engix_playpen_world.launch  engix_yosemite.launch  playpen.launch  spawn_engix.launch
engix_gazebo/launch/old/: controller.launch  display.launch  gazebo.launch
engix_gazebo/worlds/: baylands.world  empty.world
engix_hw_controller/: CMakeLists.txt  README.md  package.xml
engix_hw_controller/launch/: engix_hw_controller.launch
engix_hw_controller/src/main_controller/: main_controller.ino
engix_navigation/: README.md  package.xml
engix_navigation/config/: costmap_common.yaml  costmap_local.yaml
engix_navigation/launch/: amcl.launch  amcl1.launch  amcl_demo.launch  exploration.launch  exploration_demo.launch  explore_light.launch  gmapping1.launch  gmapping_demo.launch  move_base_mapless_demo.launch  navsat.launch  slam_toolbox.launch
engix_robot/: CMakeLists.txt  README.md  package.xml  src_31.05.tar.xz  src_s_estop_nedodelan.tar.xz
engix_robot/launch/: .robot.launch.swp  cartographer_ros.launch  diagnostics.launch  move_base.launch  robot.launch  rplidar.launch  temporal.launch
engix_robot/nodejs/public/: index.html
engix_robot/nodejs/public/assets/js/: z_rosbot_UI.js
engix_robot/params/: costmap_common.yaml  joystick_param.yaml  mapper_params_online_sync.yaml
engix_robot/scripts/: enable_can.sh  setup_udev.sh  start.sh  test_odrive.sh
engix_robot/src/: .giosave4EiU7z  engix_hardware_interface.h  engix_robot.cpp  odrive.tar.xz  odrive_axis.cpp  odrive_node.hpp
engix_viz/: README.md  package.xml
engix_viz/launch/: view_model.launch
engix_viz/rviz/: model.rviz  robot.rviz
