<?xml version="1.0"?>
<package format="2">
    <name>engix_robot</name>
    <version>0.0.2</version>
    <description>The main node for launching the robot</description>
    <maintainer email="yarulik1986@gmail.com">Yaroslav Litvinov</maintainer>
    <license>MIT</license>
    <url type="website">https://engix.ie</url>
    <author email="yarulik1986@gmail.com">Yaroslav Litvinov</author>

    <depend>can_msgs</depend>
    <depend>socketcan_bridge</depend>

    <build_depend>message_generation</build_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>hardware_interface</build_depend>
    <build_depend>diff_drive_controller</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>nav_msgs</build_depend>

    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>controller_manager</build_export_depend>
    <build_export_depend>diff_drive_controller</build_export_depend>
    <build_export_depend>hardware_interface</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>diff_drive_controller</exec_depend>
    <exec_depend>hardware_interface</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>tf</exec_depend>

    <export>

    </export>
</package>
